--- a/www/map.html
+++ b/www/map.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
     <script src="https://openlayers.org/en/v4.3.1/build/ol-debug.js"></script>
     <script src="map.js"></script>
+    <title>Measure My Area</title>
   </head>
   <body style="height:99%;" onload="init()"> 
     <div style="width:100%; height:100%;" id="map" class="map"></div>
