--- a/www/map.html
+++ b/www/map.html
@@ -15,6 +15,7 @@
   </head>
   <body style="height:99%;" onload="init()"> 
     <div style="width:100%; height:100%;" id="map" class="map"></div>
+    <script src="geojson/barrage.geojson.js"></script>
   </body>
 </html>
 
